##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-02-11	tboggs <tboggs@users.sourceforge.net>

    Fixed PerceptronClassifier implementation.

    * algorithims/__init__.py: import all from classifiers.py.
    * algorithms/classifiers.py: Moved PerceptronClassifier from perceptron.py.
    * algorithms/perceptron.py: Numerous fixes/improvements. This file is now
      independent of the rest of the SPy package (i.e., it is a pure
      multilayer perceptron implementation without the baggage of the rest of
      the SPy package).

2013-01-05	tboggs <tboggs@users.sourceforge.net>

    Enable displaying `imshow` output in an existing matplotlib figure.

    * graphics/spypylab (imshow): Accept optional `fignum` argument.

2013-01-05	tboggs <tboggs@users.sourceforge.net>

    Updated version to 0.13

    Allow modifying `ImageView` classes even when the `classes` arg was not
    provided.

    * graphics/spypylab.py:
      (ImageViewKeyboardHandler.handle_event): Check ImageView.classes instead
        of ImageView.class_axes.
      (ImageView.init_callbacks): Make class update callback handle `classes`
        being None.
      (ImageView.set_display_mode): Call .show_classes if classes are set but
        .class_axes is not (i.e., if classes were set since last update).

    Added Modified SAM (code contributed by Christian Mielke).

    * algorithms/algorithms.py:
      (spectral_angles): Compute angles in 64 bits. Clip dot products to
      prevent bad values in arccos due to roundoff.
      (msam): New function.

    Removed deprecated functions:

    * algorithms/algorithms.py: Removed principalComponents,
      linearDiscriminant, reduceEigenvectors, logDeterminant, ,
      createTrainingClasses, bhattacharyyaDistance, bDistanceTerms,
      transformImage, spectralAngles.
