@@ -33,8 +33,6 @@ from algorithms import (mean_cov, covariance, principal_components, bdist,
                         linear_discriminant, create_training_classes, ndvi,
                         orthogonalize, transform_image, unmix, spectral_angles,
                         calc_stats, cov_avg, msam)
-#from classifiers import (GaussianClassifier, MahalanobisDistanceClassifier,
-#                         PerceptronClassifier)
 from classifiers import *
 from clustering import L1, L2, kmeans, cluster, isoCluster
 from resampling import BandResampler
